<resources>
    <string name="app_name">SATI-Connect</string>
    <string name="classroom">Classroom</string>
    <string name="hey_anamika_welcome">Hey Anamika Welcome</string>
    <string name="syllabus">Syllabus</string>
    <string name="timetable">Timetable</string>
    <string name="resources">Resources</string>
    <string name="notes">Notes</string>
    <string name="leave_document">Leave Document</string>
    <string name="leave">Leave</string>
</resources>